[package]
name        = "kodumaro-clock"
version     = "1.0.5"
authors     = ["Rodrigo Montegasppα Cacilhας <montegasppa@cacilhas.info"]
license     = "BSD-3-Clause"
readme      = "README.md"
homepage    = "https://github.com/cacilhas/clock"
repository  = "https://github.com/cacilhas/clock"
keywords    = ["clock", "raylib"]
description = "Yet another X11 clock."
edition     = "2021"

[profile.release]
opt-level     = "s"
codegen-units = 1
debug = false
lto   = true
rpath = false
strip = true

[dependencies]
color-eyre = "0.6"
eyre = "0.6"
chrono = "0.4"
raylib = "5.0"
thiserror = "1.0"
